--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="image_description">Asteroid Image</string>
     <string name="asteroid_title">Asteroid Title</string>
     <string name="asteroid_description">Asteroid Description</string>
+    <string name="something_wrong">Something Went Wrong</string>
+    <string name="no_data">No Data Available</string>
+    <string name="asteroid_image">Asteroid Image</string>
 </resources>
